Created docker image

--- a/email-writer-sb/Dockerfile
+++ b/email-writer-sb/Dockerfile
@@ -5,18 +5,19 @@ FROM openjdk:20-jdk-slim
 WORKDIR /app
 
 # Copy the Maven wrapper and pom.xml first to leverage Docker cache
-COPY email-writer-sb/pom.xml email-writer-sb/mvnw email-writer-sb/.mvn/ ./
+COPY pom.xml mvnw ./
+COPY .mvn/ .mvn/
 
 # Download dependencies
 RUN chmod +x mvnw && ./mvnw dependency:go-offline
 
 # Copy the entire source code
-COPY email-writer-sb/ ./
+COPY . .
 
 # Build the JAR file
 RUN ./mvnw clean package -DskipTests
 
-# Expose the application's port (Render uses dynamic ports)
+# Expose the application's port
 EXPOSE 8080
 
 # Run the application
